--- a/Sunny_Lake/index.html
+++ b/Sunny_Lake/index.html
@@ -46,11 +46,13 @@
 			</div>
 		</header>
 		<div class="main">
-			<div class="title_img">
-				<div class="container title_img_container">
-					<div class="title_img_img"></div>
-					<div class="title_img_title">
-						Рыбалка и отдых для всей семьи в Твери в Загородном Клубе "SunnyLake"
+			<div class="title-img">
+				<div class="container title-img__container">
+					<div class="title-img__img">
+						<img src="images/logos/logo-blue_preview_rev_1.png" alt="">
+					</div>
+					<div class="title-img__title">
+						Рыбалка и отдых для всей семьи в Твери
 					</div>
 				</div>
 			</div>
